components/messaging/kafka/kafka/deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-kafka
spec:
  selector:
    matchLabels:
      app: spring-boot-kafka
  template:
    metadata:
      labels:
        app: spring-boot-kafka
    spec:
      containers:
      - name: spring-boot-kafka
        image: xpadro/spring-boot-kafka:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-kafka-service
spec:
  type: LoadBalancer
  selector:
    app: spring-boot-kafka
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 8080
