components/messaging/kafka/kafka/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: k8s.springboot.kafka
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: spring-boot-kafka-service
                port:
                  number: 9001
